# pytorch-apple

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NPU_LLM_ATTENTION_SURVEY.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
benchmarks/: benchmark_qwen.py
cuda_compiler/: __init__.py  buffer_planner.py  cuda_codegen.py  cuda_program.py  cuda_templates.py  op_classify.py  op_support.py  subgraph_analyzer.py
cuda_runtime/: __init__.py  cuda_backend.py  cuda_executor.py
docs/: backend-porting.ko.md  backend-porting.md  benchmarks.ko.md  benchmarks.md  concepts.ko.md  concepts.md  cuda-backend.ko.md  cuda-backend.md  extending.ko.md  extending.md  index.ko.md  index.md  operators.ko.md  operators.md  partitioning.ko.md  partitioning.md  setup.ko.md  setup.md  usage.ko.md  usage.md
examples/: compile_resnet.py  extract_qwen_ir.py  hf_utils.py  profile_decode.py  profile_executor.py  qwen2_decode_ir.json  qwen2_kv_mapping.json  qwen2_prefill_ir.json  run_qwen.py  run_qwen_graph.py  run_resnet.py  test_decode_only.py  test_e2e.py  verify_logits.py
metal_kernels/: add_relu.metal  common.metal  conv_bn_relu.metal  elementwise.metal  elementwise_broadcast.metal  elementwise_extended.metal  embedding.metal  fused_decode_attention.metal  index_copy.metal  matmul.metal  pool.metal  rmsnorm.metal  rope.metal  rope_rotate.metal  softmax.metal  tensor_ops.metal
npu_compiler/: __init__.py  codegen.py  codegen_core.py  codegen_fused.py  codegen_ops.py  compiled_program.py  constraint_checker.py  fusion_patterns.py  graph_optimizer.py  ir_reader.py  (+4 more)
(+47 files in other folders)
